--- a/01-master.yaml
+++ b/01-master.yaml
@@ -20,21 +20,6 @@ write_files:
         [Unit]
         Requires=flanneld.service
         After=flanneld.service
-        [Service]
-        EnvironmentFile=/etc/kubernetes/cni/docker_opts_cni.env
-  - path: "/etc/kubernetes/cni/docker_opts_cni.env"
-    content: |
-        DOCKER_OPT_BIP=""
-        DOCKER_OPT_IPMASQ=""
-  - path: "/etc/kubernetes/cni/net.d/10-flannel.conf"
-    content: |
-        {
-            "name": "podnet",
-            "type": "flannel",
-            "delegate": {
-                "isDefaultGateway": true
-            }
-        }
   - path: "/etc/systemd/system/kubelet.service"
     permissions: "0755"
     content: |
@@ -52,13 +37,14 @@ write_files:
           --anonymous-auth=false \
           --client-ca-file=/etc/kubernetes/ssl/ca.pem \
           --api-servers=http://127.0.0.1:8080 \
+          --network-plugin-dir=/etc/kubernetes/cni/net.d \
           --register-schedulable=false \
           --container-runtime=docker \
           --allow-privileged=true \
           --pod-manifest-path=/etc/kubernetes/manifests \
           --hostname-override=$private_ipv4 \
-          --cluster_dns=${DNS_SERVICE_IP} \
-          --cluster_domain=cluster.local
+          --cluster-dns=${DNS_SERVICE_IP} \
+          --cluster-domain=cluster.local
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/run/kubelet-pod.uuid
         Restart=always
         RestartSec=10
