--- a/02-worker.yaml
+++ b/02-worker.yaml
@@ -48,7 +48,8 @@ write_files:
           --cluster-domain=cluster.local \
           --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml \
           --tls-cert-file=/etc/kubernetes/ssl/worker.pem \
-          --tls-private-key-file=/etc/kubernetes/ssl/worker-key.pem
+          --tls-private-key-file=/etc/kubernetes/ssl/worker-key.pem \
+          --node-labels=kubernetes.io/role=node
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/run/kubelet-pod.uuid
         Restart=always
         RestartSec=10
