use plain text access token instead of base64 encoded value

--- a/05-do-secret.yaml
+++ b/05-do-secret.yaml
@@ -3,8 +3,6 @@ kind: Secret
 metadata:
   name: digitalocean
   namespace: kube-system
-data:
-  # insert your base64 encoded DO access token here, ensure there's no trailing newline:
-  # to base64 encode your token run:
-  #      echo -n "abc123abc123doaccesstoken" | base64
-  access-token: "$DO_ACCESS_TOKEN_BASE64"
+stringData:
+  # insert your DO access token here
+  access-token: "$DO_ACCESS_TOKEN"
